[EME] Fix NavigatorEME::tryNextSupportedConfiguration typo https://bugs.webkit.org/show_bug.cgi?id=182324

Reviewed by Žan Doberšek.

* Modules/encryptedmedia/NavigatorEME.cpp:
(WebCore::tryNextSupportedConfiguration): Fix
candidateCofiguration typo.


Canonical link: https://commits.webkit.org/198133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227895 268f45cc-cd09-0410-ab3c-d52691b4dbfc