Source/WebCore/Modules/encryptedmedia/NavigatorEME.cpp
@@ -77,7 +77,7 @@ static void tryNextSupportedConfiguration(RefPtr<CDM>&& implementation, Vector<M
         // 6.3.1. Let candidate configuration be the value.
         // 6.3.2. Let supported configuration be the result of executing the Get Supported Configuration
         //        algorithm on implementation, candidate configuration, and origin.
-        MediaKeySystemConfiguration candidateCofiguration = WTFMove(supportedConfigurations.first());
+        MediaKeySystemConfiguration candidateConfiguration = WTFMove(supportedConfigurations.first());
         supportedConfigurations.remove(0);
 
         CDM::SupportedConfigurationCallback callback = [implementation = implementation, supportedConfigurations = WTFMove(supportedConfigurations), promise] (std::optional<MediaKeySystemConfiguration> supportedConfiguration) mutable {
@@ -99,7 +99,7 @@ static void tryNextSupportedConfiguration(RefPtr<CDM>&& implementation, Vector<M
 
             tryNextSupportedConfiguration(WTFMove(implementation), WTFMove(supportedConfigurations), WTFMove(promise));
         };
-        implementation->getSupportedConfiguration(WTFMove(candidateCofiguration), WTFMove(callback));
+        implementation->getSupportedConfiguration(WTFMove(candidateConfiguration), WTFMove(callback));
         return;
     }
 
